featured bike section done with responsive

--- a/index.html
+++ b/index.html
@@ -70,6 +70,29 @@
 
     <main>
 
+        <section>
+            <div class="section_head text-center mt-12">
+                <h2 class="font-bold text-xl 
+                md:text-4xl 
+                lg:text-6xl
+                ">Fetured Bikes In This Year</h2>
+                <p class="text-xs my-1 text-orange-500 md:text-lg">Best <span class=" border-b-2 border-orange-500">bike collec</span>tion</p>
+            </div>
+
+            <div class="bike_showcase px-4 mt-16
+            md:grid md:grid-cols-2 md:gap-8
+             lg:grid-cols-4  
+            ">
+
+                <img src="images/slider/bike1.png" alt="bike img" class="mt-16">
+                <img src="images/slider/bike2.png" alt="bike img" class="mt-16">
+                <img src="images/slider/bike3.png" alt="bike img" class="mt-16">
+                <img src="images/slider/bike4.png" alt="bike img" class="mt-16">
+
+            </div>
+
+        </section>
+
     </main>
 
 
