happy client section done with responsive

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- this is main area -->
 
-    <main>
+    <main class="max-w-[1200px] mx-auto">
 
         <!-- feature bike section -->
         <section class="featured_bike">
@@ -155,6 +155,98 @@
             </div>
 
         </section>
+
+        <!-- happy clients section -->
+         <section class="happy clients">
+
+              <!-- section head for all section -->
+              <div class="section_head text-center mt-12">
+                <h2 class="font-bold text-2xl 
+                md:text-4xl 
+                lg:text-6xl
+                ">Happy <span class="text-[#E76F51]">Clients Says</span></h2>
+               
+            </div>
+
+            <!-- cliend card container -->
+             <div class="clients_container px-4 mt-16
+             md:grid md:grid-cols-2 md:gap-8
+             lg:grid-cols-3
+             
+             ">
+
+                <!-- client card -->
+                <div class="clints_card text-center border-solid border-2 border-gray-300 p-4 rounded-md">
+
+                    <img src="images/others/user-1.png" alt="clients img" class="w-8/12 mx-auto">
+                    <p class="text-[16px] text-gray-400 mt-8 mb-4 ">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+
+                     <ul class="flex justify-center mt-3 mb-4">
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-regular fa-star text-[#E76F51]"></i></li>
+                     </ul>
+
+                      <a href="#" class="font-bold text-[#23A6F0]">Regina Miles</a>
+                      <p class="font-bold text-gray-600 mt-3">Banker</p>
+
+                </div>
+
+                 <!-- client card -->
+                 <div class="clints_card text-center border-solid border-2 my-4 md:my-0 border-gray-300 p-4 rounded-md">
+
+                    <img src="images/others/user-1.png" alt="clients img" class="w-8/12 mx-auto">
+                    <p class="text-[16px] text-gray-400 mt-8 mb-4 ">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+
+                     <ul class="flex justify-center mt-3 mb-4">
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-regular fa-star text-[#E76F51]"></i></li>
+                     </ul>
+
+                      <a href="#" class="font-bold text-[#23A6F0]">Regina Miles</a>
+                      <p class="font-bold text-gray-600 mt-3">Banker</p>
+
+                </div>
+
+                 <!-- client card -->
+                 <div class="clints_card text-center border-solid border-2 border-gray-300 p-4 rounded-md">
+
+                    <img src="images/others/user-1.png" alt="clients img" class="w-8/12 mx-auto">
+                    <p class="text-[16px] text-gray-400 mt-8 mb-4 ">Slate helps you see how 
+                        many more days you need 
+                        to work to reach your financial 
+                        goal for the month and year.</p>
+
+                     <ul class="flex justify-center mt-3 mb-4">
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-solid fa-star text-[#E76F51]"></i></li>
+                        <li class="mx-2"><i class="fa-regular fa-star text-[#E76F51]"></i></li>
+                     </ul>
+
+                      <a href="#" class="font-bold text-[#23A6F0]">Regina Miles</a>
+                      <p class="font-bold text-gray-600 mt-3">Banker</p>
+
+                </div>
+
+
+
+             </div>
+
+
+         </section>
 
     </main>
 
