some margin issue fixed

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <main class="max-w-[1200px] mx-auto">
 
         <!-- feature bike section -->
-        <section class="featured_bike">
+        <section class="featured_bike mt-24">
             <!-- section head for all section -->
             <div class="section_head text-center mt-12">
                 <h2 class="font-bold text-2xl 
@@ -98,7 +98,7 @@
         </section>
 
         <!-- news section -->
-        <section class="latest_news mx-4">
+        <section class="latest_news mx-4 mt-36">
 
             <!-- secction head for all section -->
             <div class="section_head text-center mt-12">
@@ -157,7 +157,7 @@
         </section>
 
         <!-- happy clients section -->
-         <section class="happy clients">
+         <section class="happy clients mt-36">
 
               <!-- section head for all section -->
               <div class="section_head text-center mt-12">
@@ -249,7 +249,7 @@
          </section>
 
          <!-- Frequently ask question seciton -->
-          <div class="ask_question">
+          <div class="ask_question mt-36">
 
                  <!-- section head for all section -->
                  <div class="section_head text-center mt-12">
@@ -366,7 +366,7 @@
     <footer class="bg-black px-4 py-12 mt-14">
  
 
-        <div class="footer_main max-w-[1200px] mx-auto md:grid md:grid-cols-2 md:gap-56">
+        <div class="footer_main max-w-[1200px] mx-auto md:grid md:grid-cols-2 md:gap-56 lg:gap-96">
             <!-- footer left side -->
             <div class="left text-white">
                 <ul class="flex gap-4 text-[14px]">
